# gspc-bb

./: CMakeLists.txt  README.md  example.lib
buchberger/: CMakeLists.txt  config.hpp.in  implementation.cpp  singular_functions.cpp  singular_functions.hpp
buchberger/LIB/: buchbergergspc.lib
examples/: M1_GB.ssi  buchbergergp.lib  example.lib
interface/: Parameters.hpp  ValuesOnPorts.hpp  Workflow.hpp  WorkflowResult.hpp  buchberger_interface.hpp  execute.hpp  parse_parameters_from_singular.hpp
src/: CMakeLists.txt  installation.cpp  installation.hpp.in
workflow/: CMakeLists.txt  buchberger.xpnet  structures.xpnet
